    (scottcarey)

    AVRO-1334. Java: Upgrade snappy-java dependency to 1.0.5
    (scottcarey)

    AVRO-1238. C: EOF detection in avro_file_reader_read_value.
    (Michael Cooper via dcreager)

    AVRO-1324. C: Handle namespaces in schema parsing.
    (Ben Walsh via dcreager)

    AVRO-1290. Handling NaN and positive and negative infinities in
    C++ Json (Daniel Russel via thiru)

  BUG FIXES

    AVRO-1296. Python: Fix schemas retrieved from protocol types
    to not ignore namespaces. (Jeremy Kahn via philz)

    AVRO-1266. Java: Fix mapred.AvroMultipleOutputs to support multiple
    different schemas.  (Ashish Nagavaram via martinkl)

    AVRO-1295. Java: Fix printing of a non-null namespace within a
    null namespace. (cutting)

    AVRO-1300. Java: Fix generated copy constructors to copy field
    values. (Christophe Taton via cutting)

    AVRO-1309. Java: Fix nested protobuf enums. (cutting)

    AVRO-1308. Java: Fix repeated protobuf messages & enums.
    (Steve Zesch & cutting)

    AVRO-1306. Java mapred: Fix incorrect documentation for combiners.
    (Mina Naguib via martinkl)

    AVRO-1320. Java: Fix Trevni to correctly read unions and specific enums.
    (cutting)

    AVRO-1326. Java: Fix bug in BZip2 codec. (cutting)

    AVRO-1322. Java: Add Hadoop version classifier to trevni-avro
    Maven artifacts.  (massie)

    AVRO-1316. Java: Fix compiler to split long schema string
    constants so javac can compile them. (Jeremy Kahn via cutting)

    AVRO-1331. Java: Fix schema-parsing incompatibility from AVRO-1295.
    (cutting)

    AVRO-1181. compileJsonSchemaFromString(std::string) declared in
    Compiler.hh but not defined (Daniel Russel via thiru)

    AVRO-1346. C++: schema parser cannot parse verbose primitive types
    (Skye Wanderman-Milne via thiru)

    AVRO-1171. Avro C++ Json Decoder: Double cannot be decoded (Sam
    Overend via thiru)

    AVRO-1293. Java: Fix potential deadlock in NettyTransceiver.